5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/1685/executions/1602_2895.log
== TEST (2019-03-20 18:49:14) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))

-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:50:54) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))
x=float(input("Qual o valor unitario de cada jogo:"))
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:51:44) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))


-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:53:59) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:39) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))
y = float(input("O valor unitario de cada jogo
					 "))
-- ERROR:
File "XXXX", line 2
    y = float(input("O valor unitario de cada jogo
                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:49) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))
y = float(input("O valor unitario de cada jogo"))
-- ERROR:
File "XXXX", line 2
    y = float(input("O valor unitario de cada jogo
                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:56:18) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))
y = float(input("O valor unitario de cada jogo:"))
-- ERROR:
File "XXXX", line 2
    y = float(input("O valor unitario de cada jogo
                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:12) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))
y = float(input("O valor unitario de cada jogo:"))
z = float(input("Qual o valor do frete:"))
-- ERROR:
File "XXXX", line 2
    y = float(input("O valor unitario de cada jogo
                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:56) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))
y = float(input("O valor unitario de cada jogo:"))
z = float(input("Qual o valor do frete:"))
total=x*Y+Z

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=x*Y+Z
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:01:18) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))
y = float(input("O valor unitario de cada jogo:"))
z = float(input("Qual o valor do frete:"))
total=x*y+z

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=x*Y+Z
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:02:27) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))
y = float(input("O valor unitario de cada jogo:"))
z = float(input("Qual o valor do frete:"))
total=x*y+z
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:02:53) 
-- CODE:
x = float(input("quantos jogos seram encomendados:"))
y = float(input("O valor unitario de cada jogo:"))
z = float(input("Qual o valor do frete:"))
total=x*y+z
print(total)
-- EXECUTION TIME:
0.166725
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
